--- a/ayuep/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/ayuep/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -7,7 +7,8 @@
         android:id="@+id/tb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:layout_above="@+id/bottom_navigation_bar"/>
 
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
         android:id="@+id/bottom_navigation_bar"
