--- a/ayuep/app/src/main/res/layout/fragment_store_navigation.xml
+++ b/ayuep/app/src/main/res/layout/fragment_store_navigation.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/id_store_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="this is all store" />
+        android:layout_height="match_parent"></ListView>
 
 </FrameLayout>
