--- a/ayuep/app/src/main/res/layout/list_store_item.xml
+++ b/ayuep/app/src/main/res/layout/list_store_item.xml
@@ -18,7 +18,6 @@
         android:layout_toRightOf="@+id/id_store_image"
         android:layout_alignBottom="@+id/id_store_image"
         android:layout_marginLeft="16dp"
-        android:layout_marginBottom="14dp"
         android:textSize="25dp"
         android:text="@string/app_name"/>
     <TextView
@@ -28,7 +27,6 @@
         android:layout_above="@+id/id_store_name"
         android:text="1234"
         android:textSize="25dp"
-        android:layout_alignLeft="@+id/id_store_name"
-        android:layout_marginBottom="5dp"/>
+        android:layout_alignLeft="@+id/id_store_name" />
 
 </RelativeLayout>
