--- a/ayuep/app/src/main/res/layout/fragment_dashboard_navigation.xml
+++ b/ayuep/app/src/main/res/layout/fragment_dashboard_navigation.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/convenientBanner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="this is dashboard" />
+        android:layout_height="200dp"
+        app:canLoop="true"
+    />
 
 </FrameLayout>
