--- a/ayuep/app/src/main/res/layout/type_list_item.xml
+++ b/ayuep/app/src/main/res/layout/type_list_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorDashboardBackgroud">
+    android:layout_height="45dp">
 
     <TextView
-        android:id="@+id/type_name"
+        android:id="@+id/id_type_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25pt"
         android:text="123"
-        android:layout_marginLeft="50dp"
-        android:textColor="@color/colorTypeNameTextColor" />
+        android:layout_marginLeft="60dp"
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/colorSummary"
+        android:textSize="40dp"/>
 
 </LinearLayout>
