--- a/ayuep/app/src/main/res/values/colors.xml
+++ b/ayuep/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="colorTitle">#808080</color>
 
     <color name="colorLine">#D9D9D9</color>
+    <color name="colorSummary">#FF6950</color>
 </resources>
