--- a/ayuep/app/src/main/res/layout/fragment_dashboard_navigation.xml
+++ b/ayuep/app/src/main/res/layout/fragment_dashboard_navigation.xml
@@ -4,6 +4,17 @@
     android:layout_height="match_parent"
     android:background="@color/colorDashboardBackgroud">
 
+    <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        android:id="@+id/rotate_header_list_view_frame"
+        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        cube_ptr:ptr_duration_to_close="200"
+        cube_ptr:ptr_duration_to_close_header="1000"
+        cube_ptr:ptr_keep_header_when_refresh="true"
+        cube_ptr:ptr_pull_to_fresh="false"
+        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+        cube_ptr:ptr_resistance="1.7">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -35,5 +46,6 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
 
 </LinearLayout>
