Add product list.

--- a/ayuep/app/src/main/res/layout/activity_register_customer.xml
+++ b/ayuep/app/src/main/res/layout/activity_register_customer.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorCommonBackGroud"
 
-    tools:context="com.ws.apple.ayuep.ui.order.RegisterCustomer">
+    tools:context="com.ws.apple.ayuep.ui.order.RegisterCustomerActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
