--- a/ayuep/app/src/main/res/layout/activity_product_list.xml
+++ b/ayuep/app/src/main/res/layout/activity_product_list.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_products"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ws.apple.ayuep.ui.product.ProductsActivity"
     android:background="@color/colorCommonBackGroud">
 
     <GridView
@@ -17,8 +13,5 @@
         android:verticalSpacing="10dp"
         android:layout_marginLeft="16dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp">
-
-    </GridView>
-
-</android.support.constraint.ConstraintLayout>
+        android:paddingRight="10dp"></GridView>
+</LinearLayout>
