--- a/ayuep/app/src/main/res/layout/activity_register_customer.xml
+++ b/ayuep/app/src/main/res/layout/activity_register_customer.xml
@@ -65,12 +65,12 @@
                     android:layout_marginBottom="16dp"/>
                 <EditText
                     style="?android:attr/textViewStyle"
+                    android:id="@+id/id_customer_phone"
                     android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="16dp"
                     android:textSize="20dp"
-                    android:layout_alignRight="@+id/store_name"
                     android:layout_gravity="center"
                     android:lines="1"
                     android:singleLine="true"
@@ -93,6 +93,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"/>
                 <EditText android:layout_width="fill_parent"
+                    android:id="@+id/id_customer_address"
                     android:layout_height="120dp"
                     android:inputType="textMultiLine"
                     android:textSize="20dp"
