--- a/ayuep/app/src/main/res/values/colors.xml
+++ b/ayuep/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorDashboardBackgroud">#FFF877</color>
     <color name="colorTypeNameTextColor">#D66929</color>
 
-    <color name="colorCommonBackGroud">#f2f2f2</color>
+    <color name="colorCommonBackgroud">#f2f2f2</color>
     <color name="colorWhiteColor">#fff</color>
 
     <color name="colorValue">#403335</color>
