--- a/ayuep/app/src/main/res/layout/activity_product_detail.xml
+++ b/ayuep/app/src/main/res/layout/activity_product_detail.xml
@@ -135,5 +135,6 @@
         android:textSize="20dp"
         android:text="预约"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/colorWhiteColor"/>
+        android:textColor="@color/colorWhiteColor"
+        android:onClick="onOrderClick"/>
 </RelativeLayout>
