--- a/ayuep/app/src/main/res/layout/list_customer_order_item.xml
+++ b/ayuep/app/src/main/res/layout/list_customer_order_item.xml
@@ -1,71 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/id_order_product_list"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/colorDashboardBackgroud"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhiteColor">
+        <ImageView
+            android:id="@+id/id_order_product_image"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_toRightOf="@+id/id_order_product_image"
+            android:layout_alignBottom="@+id/id_order_product_image"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/id_order_product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Test"
+                android:textSize="15dp"
+                android:layout_marginTop="3dp"
+                android:lines="1"/>
+
+            <TextView
+                android:id="@+id/id_order_product_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="123"
+                android:textSize="15dp"
+                android:layout_marginTop="3dp"
+                android:textColor="@color/colorPrice"
+                android:lines="1"/>
+
+            <TextView
+                android:id="@+id/id_order_expected_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="time"
+                android:textSize="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="bottom"
+                android:lines="1"/>
+
+            <TextView
+                android:id="@+id/id_order_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="status"
+                android:textSize="15dp"
+                android:layout_marginTop="3dp"
+                android:layout_gravity="bottom"
+                android:lines="1"/>
+
+        </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_toRightOf="@+id/id_order_product_list"
-        android:layout_alignBottom="@+id/id_order_product_list"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="16dp"
-        android:orientation="vertical"
-        android:background="@color/colorDashboardBackgroud">
-
-        <TextView
-            android:id="@+id/id_order_product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Test"
-            android:textSize="20dp"
-            android:layout_marginTop="3dp"
-            android:lines="1"/>
-
-        <TextView
-            android:id="@+id/id_order_product_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="123"
-            android:textSize="20dp"
-            android:layout_marginTop="3dp"
-            android:lines="1"/>
-
-        <TextView
-            android:id="@+id/id_order_prodcut_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="time"
-            android:textSize="20dp"
-            android:layout_marginTop="3dp"
-            android:lines="1"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="status"
-            android:textSize="20dp"
-            android:layout_marginTop="3dp"
-            android:lines="1"/>
+        android:layout_height="1dp"
+        android:background="@color/colorLine">
 
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="16dp"
-        android:background="@color/colorWhiteColor"
-        android:text="comment"/>
+    <LinearLayout
+        android:id="@+id/id_order_comment_content"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/id_order_comments_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="评价"
+            android:textSize="18dp"
+            android:background="@color/colorWhiteColor"
+            android:textColor="@color/colorTitle"/>
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorLine">
+
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
