--- a/ayuep/app/src/main/res/layout/list_store_item.xml
+++ b/ayuep/app/src/main/res/layout/list_store_item.xml
@@ -9,8 +9,7 @@
         android:layout_height="110dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/colorDashboardBackgroud"/>
+        android:layout_marginBottom="16dp" />
     <TextView
         android:id="@+id/id_store_name"
         android:layout_width="wrap_content"
