--- a/ayuep/app/src/main/res/layout/product_grid_item.xml
+++ b/ayuep/app/src/main/res/layout/product_grid_item.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="123"
-        android:textColor="@color/colorTitle"
+        android:textColor="@color/colorPrice"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:textSize="25dp"/>
