Commit submit comments.

--- a/ayuep/app/src/main/res/layout/activity_create_order.xml
+++ b/ayuep/app/src/main/res/layout/activity_create_order.xml
@@ -84,6 +84,10 @@ xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginRight="16dp"
+                android:paddingLeft="4dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="4dp"
                 android:textSize="20dp"
                 android:layout_gravity="center"
                 android:lines="1"
@@ -112,6 +116,10 @@ xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginRight="16dp"
+                android:paddingLeft="4dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="4dp"
                 android:textSize="20dp"
                 android:layout_gravity="center"
                 android:lines="1"
