--- a/ayuep/app/src/main/res/layout/activity_register_customer.xml
+++ b/ayuep/app/src/main/res/layout/activity_register_customer.xml
@@ -45,6 +45,10 @@
                     android:layout_marginLeft="10dp"
                     android:textSize="20dp"
                     android:layout_alignRight="@+id/store_name"
+                    android:paddingLeft="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:paddingRight="4dp"
                     android:layout_gravity="center"
                     android:lines="1"
                     android:singleLine="true"
@@ -72,6 +76,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginRight="16dp"
+                    android:paddingLeft="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:paddingRight="4dp"
                     android:textSize="20dp"
                     android:layout_gravity="center"
                     android:lines="1"
@@ -102,6 +110,11 @@
                     android:textSize="20dp"
                     android:singleLine="false"
                     android:gravity="left|top"
+                    android:paddingLeft="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:paddingRight="4dp"
+                    android:scrollbars="vertical"
                     android:background="@drawable/edit_frame_color"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
