--- a/ayuep/app/src/main/res/layout/fragment_my_info_navigation.xml
+++ b/ayuep/app/src/main/res/layout/fragment_my_info_navigation.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
-        android:background="@color/colorWhiteColor">
+        android:background="@color/colorWhiteColor"
+        android:onClick="goToMyStore">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
