--- a/ayuep/app/src/main/res/layout/list_store_item.xml
+++ b/ayuep/app/src/main/res/layout/list_store_item.xml
@@ -18,6 +18,7 @@
         android:layout_alignBottom="@+id/id_store_image"
         android:layout_marginLeft="16dp"
         android:textSize="25dp"
+        android:lines="1"
         android:text="@string/app_name"/>
     <TextView
         android:id="@+id/id_store_address"
@@ -26,6 +27,7 @@
         android:layout_above="@+id/id_store_name"
         android:text="1234"
         android:textSize="25dp"
+        android:lines="1"
         android:layout_alignLeft="@+id/id_store_name" />
 
 </RelativeLayout>
