--- a/ayuep/app/src/main/res/layout/activity_store_info.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_info.xml
@@ -110,6 +110,7 @@
             android:text="@string/store_address"
             android:textSize="25dp"
             android:layout_alignParentRight="true"
+            android:layout_gravity="left|top"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"/>
@@ -118,7 +119,7 @@
             android:id="@+id/id_store_address"
             style="?android:attr/textViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_marginRight="16dp"
             android:textSize="28dp"
             android:lines="1"
