--- a/ayuep/app/src/main/res/layout/list_my_product_item.xml
+++ b/ayuep/app/src/main/res/layout/list_my_product_item.xml
@@ -30,6 +30,8 @@
             android:layout_above="@+id/id_product_price"
             android:text="1234"
             android:textSize="25dp"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_alignLeft="@+id/id_product_price"
             android:layout_marginBottom="5dp"/>
     </RelativeLayout>
@@ -38,7 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/id_product_item"
-        android:background="@color/colorLine">
+        android:background="@color/colorLine"
+        android:orientation="vertical">
 
     </LinearLayout>
     <LinearLayout
