--- a/ayuep/app/src/main/res/layout/activity_product_detail.xml
+++ b/ayuep/app/src/main/res/layout/activity_product_detail.xml
@@ -116,6 +116,29 @@
                         android:textColor="@color/colorValue"
                         android:layout_marginBottom="8dp"/>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp">
+
+                    <ImageButton
+                        android:id="@+id/id_call_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:src="@mipmap/icon_phone"
+                        android:layout_gravity="center_vertical"
+                        android:background="@android:color/transparent"/>
+
+                    <ImageButton
+                        android:id="@+id/id_sms_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:src="@mipmap/icon_chat"
+                        android:layout_gravity="center_vertical"
+                        android:background="@android:color/transparent"/>
+                </LinearLayout>
             </LinearLayout>
             <Button
                 android:layout_width="match_parent"
