--- a/ayuep/app/src/main/res/layout/list_store_order_item.xml
+++ b/ayuep/app/src/main/res/layout/list_store_order_item.xml
@@ -8,30 +8,29 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/id_store_order_product_list"
+            android:id="@+id/id_product_image"
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorDashboardBackgroud"/>
+            android:layout_marginTop="16dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:layout_toRightOf="@+id/id_store_order_product_list"
-            android:layout_alignBottom="@+id/id_store_order_product_list"
+            android:layout_toRightOf="@+id/id_product_image"
+            android:layout_alignBottom="@+id/id_product_image"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="16dp"
-            android:orientation="vertical"
-            android:background="@color/colorDashboardBackgroud">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/id_store_order_product_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Test"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:layout_marginTop="3dp"
+                android:ellipsize="end"
                 android:lines="1"/>
 
             <TextView
@@ -39,26 +38,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="123"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:layout_marginTop="3dp"
-                android:lines="1"/>
+                android:lines="1"
+                android:textColor="@color/colorPrice"/>
 
             <TextView
                 android:id="@+id/id_store_order_prodcut_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="time"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:layout_marginTop="3dp"
-                android:lines="1"/>
+                android:lines="1"
+                android:ellipsize="end"/>
 
             <TextView
+                android:id="@+id/id_store_order_expect_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="status"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:layout_marginTop="3dp"
-                android:lines="1"/>
+                android:lines="1"
+                android:ellipsize="end"/>
 
         </LinearLayout>
     </RelativeLayout>
@@ -79,7 +82,7 @@
             android:layout_toRightOf="@+id/id_store_order_customer_phone"
             android:layout_marginRight="5dp"
             android:layout_alignParentLeft="true"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:ellipsize="end"
             android:maxWidth="200dp"/>
 
@@ -90,7 +93,7 @@
             android:layout_alignParentRight="true"
             android:text="188017615551"
             android:lines="1"
-            android:textSize="20dp"/>
+            android:textSize="15dp"/>
     </RelativeLayout>
 
     <TextView
@@ -110,25 +113,30 @@
         android:background="@color/colorCommonBackgroud">
 
         <ImageButton
+            android:id="@+id/id_call_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="5dp"
-            android:src="@mipmap/icon_phone"/>
+            android:src="@mipmap/icon_phone"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"/>
 
         <ImageButton
+            android:id="@+id/id_sms_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:src="@mipmap/icon_chat"/>
+            android:src="@mipmap/icon_chat"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"/>
 
         <Button
+            android:id="@+id/id_receiver_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
-            android:text="123"/>
+            android:text="接单"/>
     </LinearLayout>
 
 </LinearLayout>
