--- a/ayuep/app/src/main/res/layout/activity_create_order.xml
+++ b/ayuep/app/src/main/res/layout/activity_create_order.xml
@@ -128,10 +128,16 @@ xmlns:tools="http://schemas.android.com/tools"
         </LinearLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
             android:text="完成"
+            android:textSize="20dp"
+            android:textColor="@color/colorWhiteColor"
+            android:background="@color/colorAccent"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
             android:onClick="createOrder"/>
     </LinearLayout>
 
