--- a/ayuep/app/src/main/res/layout/activity_register_customer.xml
+++ b/ayuep/app/src/main/res/layout/activity_register_customer.xml
@@ -122,9 +122,15 @@
             </LinearLayout>
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="test"
-                android:id="@+id/test"
+                android:layout_height="35dp"
+                android:text="完成"
+                android:textSize="20dp"
+                android:textColor="@color/colorWhiteColor"
+                android:background="@color/colorAccent"
+                android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="50dp"
                 android:onClick="submitCustomer"/>
         </LinearLayout>
     </ScrollView>
