--- a/ayuep/app/src/main/res/layout/activity_store_modify.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_modify.xml
@@ -135,21 +135,24 @@
                 android:layout_height="wrap_content">
                 <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="75dp"
+                    android:layout_height="match_parent"
                     android:id="@+id/id_store_list_view"
                     android:minHeight="100dp">
 
                 </ListView>
             </LinearLayout>
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:background="@color/colorAccent"
-                android:textSize="20dp"
-                android:text="确定"
-                android:layout_alignParentBottom="true"
-                android:textColor="@color/colorWhiteColor"
-                android:onClick="onSubmitClick">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorAccent"
+                    android:textSize="20dp"
+                    android:text="确定"
+                    android:layout_alignParentBottom="true"
+                    android:textColor="@color/colorWhiteColor"
+                    android:onClick="onSubmitClick"/>
 
             </LinearLayout>
         </LinearLayout>
