--- a/ayuep/app/src/main/res/layout/activity_store_modify.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_modify.xml
@@ -131,25 +131,18 @@
                     />
             </LinearLayout>
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/id_store_list_view"
-                    android:minHeight="100dp">
-
-                </ListView>
-            </LinearLayout>
-            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:layout_marginBottom="30dp">
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
                     android:background="@color/colorAccent"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
                     android:textSize="20dp"
-                    android:text="确定"
+                    android:text="提交"
                     android:layout_alignParentBottom="true"
                     android:textColor="@color/colorWhiteColor"
                     android:onClick="onSubmitClick"/>
