--- a/ayuep/app/src/main/res/layout/activity_store_products.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_products.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <LinearLayout
+    android:layout_height="match_parent">
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/id_list_view">
-            </ListView>
-        </LinearLayout>
+        android:orientation="vertical"
+        android:layout_above="@+id/id_store_products_add">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom">
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/id_store_products_add"
-                android:text="添加"/>
+            android:orientation="vertical">
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/id_list_view">
+                </ListView>
         </LinearLayout>
-    </LinearLayout>
 
-</ScrollView>
+    </ScrollView>
+    <Button
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:id="@+id/id_store_products_add"
+        android:text="添加"
+        android:textColor="@color/colorWhiteColor"
+        android:background="@color/colorAccent"/>
+</RelativeLayout>
 
