--- a/ayuep/app/src/main/res/layout/activity_create_order.xml
+++ b/ayuep/app/src/main/res/layout/activity_create_order.xml
@@ -128,6 +128,7 @@ xmlns:tools="http://schemas.android.com/tools"
         </LinearLayout>
 
         <Button
+            android:id="@+id/id_create_order"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:text="完成"
@@ -137,8 +138,7 @@ xmlns:tools="http://schemas.android.com/tools"
             android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="50dp"
-            android:onClick="createOrder"/>
+            android:layout_marginBottom="50dp" />
     </LinearLayout>
 
 </LinearLayout>
