--- a/ayuep/app/src/main/res/layout/activity_store_modify.xml
+++ b/ayuep/app/src/main/res/layout/activity_store_modify.xml
@@ -28,10 +28,10 @@
                     android:text="套系图片"
                     android:textSize="25dp"
                     android:textColor="@color/colorTitle"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="长按图片并拖放可排序"/>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="长按图片并拖放可排序"/>-->
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -137,6 +137,7 @@
                 android:layout_marginTop="35dp"
                 android:layout_marginBottom="30dp">
                 <Button
+                    android:id="@+id/id_submit"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:background="@color/colorAccent"
